# C-Minus-Minus

./: .clang-format  .gitignore  9cc.c  9cc.h  CMakeLists.txt  Makefile  cmm.h  codegen.c  main.c  parser.c  test.sh  test_functions.c  tokenizer.c
include/: cmm.h
src/: codegen.c  main.c  node.c  parser.c  tokenizer.c  type.c  visualizer.c
test/: ans.s  test.sh  test_functions.c
